getResourceFile Stream